<resources>
    <string name="app_name" translatable="false">Astro Lumina</string>
    <string name="action_go" translatable="false">Go</string>
    <string name="baking_title" translatable="false">Baking with Gemini</string>
    <string name="label_prompt" translatable="false">Prompt</string>
    <string name="prompt_placeholder" translatable="false">Provide a recipe for the baked goods in the image</string>
    <string name="image1_description" translatable="false">Cupcake</string>
    <string name="image2_description" translatable="false">Cookies</string>
    <string name="image3_description" translatable="false">Cake</string>
    <string name="results_placeholder" translatable="false">(Results will appear here)</string>

    <!-- Home ekranı metinleri -->
    <string name="welcome_text" translatable="false">Hoş geldin</string>
    <string name="logout_button" translatable="false">Çıkış Yap</string>
    <string name="profile_photo" translatable="false">Profil Fotoğrafı</string>
    <string name="select_photo" translatable="false">Fotoğraf Seç</string>
    <string name="name_hint" translatable="false">Adınız</string>
    <string name="birth_date_hint" translatable="false">Doğum Tarihi (GG/AA/YYYY)</string>
    <string name="birth_time_hint" translatable="false">Doğum Saati (SS:dd)</string>
    <string name="birth_place_hint" translatable="false">Doğum Yeri</string>
    <string name="save_button" translatable="false">Kaydet</string>

    <string name="welcome_message" translatable="false">Hoş geldin, %1$s</string>
    <string name="home_subtitle" translatable="false">Doğum haritanı keşfet, burç uyumunu öğren, astrolojinin keyfini çıkar.</string>
    <string name="title_daily_horoscope" translatable="false">Günlük Burç</string>
    <string name="title_birth_chart" translatable="false">Doğum Haritası</string>
    <string name="title_cosmic_match" translatable="false">Kozmik Bağlantılar</string>
    <string name="title_vedic_astrology" translatable="false">Vedik Astroloji</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>