<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home"
        android:padding="24dp">

        <!-- Profil Fotoğrafı Yuvarlak Kart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:cardCornerRadius="65dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person"
                android:scaleType="centerCrop"
                android:contentDescription="Profil Fotoğrafı" />
        </androidx.cardview.widget.CardView>

        <!-- Fotoğraf Seç Butonu -->
        <Button
            android:id="@+id/buttonSelectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_photo"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/imageCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- FORM BLOĞU -->
        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:background="@drawable/bg_profile_card"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSelectPhoto">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="331dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextBirthDate"
                android:layout_width="327dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:hint="@string/birth_date_hint"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextBirthTime"
                android:layout_width="327dp"
                android:layout_height="73dp"
                android:layout_marginTop="8dp"
                android:hint="@string/birth_time_hint"
                android:inputType="time" />

            <EditText
                android:id="@+id/editTextBirthPlace"
                android:layout_width="328dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:hint="@string/birth_place_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"

                android:text="@string/save_button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
