<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home8"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/astro_trans"
        android:contentDescription="AstroLumia Logo"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="Aramıza Hoş Geldin"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/home_subtitle"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:padding="8dp"
            android:rowCount="2">

            <!-- Günlük Burç -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDaily"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="Günlük Burç"
                        android:scaleType="centerCrop"
                        android:src="@drawable/aries_icon"
                        android:id="@+id/imageDaily"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#66000000"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/title_daily_horoscope"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Doğum Haritası -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardChart"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="Doğum Haritası"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_birthmap" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#66000000"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/title_birth_chart"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Kozmik Bağlantılar -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardMatch"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="Kozmik Bağlantılar"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_match" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#66000000"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/title_cosmic_match"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Vedik Astroloji -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardVedicAstro"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="Vedik Astroloji"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_vedic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#66000000"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/title_vedic_astrology"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>
        </GridLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>